Fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1482,7 +1482,7 @@ th {
     display:flex;
     flex-direction:column;
     width:100%;
-    align-items:flex-start;
+    align-items:center;
     justify-content:center;
   }
   
